terraform/jenkins/ingress_jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    # Required for Traefik Ingress Controller
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: jenkins.local  # Replace with your domain or public IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
